Fixed unit tests.