@@ -38,7 +38,6 @@ idea {
 
 tasks.withType(Test) {
     useJUnitPlatform()
-    jvmArgs '--enable-preview'
 }
 
 //// Change name for distribution to C(arrot)LI.
